--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     </p1>
     <section class="self" style="text-align: center;">
         <a href="mailto:MERRICKAFOSTER@students.utech.edu.jm?subject=ID%232306913">
-            <img src="../assetshtml/self.jpg" alt="Picture of Merrick">
+            <img src="self.jpg" alt="Picture of Merrick">
         </a>
     </section>
     
