--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </style>
 </head>
 <body>
-    <h1>Personalities</h1>
+    <h1>Home</h1>
     <nav class="navbar">
         <ul>
             <li><a href="index.html">Home</a></li>
