--- a/personality.html
+++ b/personality.html
@@ -84,8 +84,8 @@
     <section class="personality-tool">
         <h2>Personality Test</h2>
         <p>I used an online personality tool to assess myself. Below are the results of the test.</p>
-        <img src="../assetshtml/first.png" alt="Personality Test Result 1">
-        <img src="../assetshtml/second.png" alt="Personality Test Result 2">
+        <img src="first.png" alt="Personality Test Result 1">
+        <img src="second.png" alt="Personality Test Result 2">
         <p>The personality test revealed insights about my traits and behaviors. In general, I believe the test has validity as it accurately reflected my characteristics and tendencies. The results provided me with valuable self-awareness and reinforced my understanding of my strengths and areas for improvement.</p>
     </section>
     
