--- a/Storyboard.html
+++ b/Storyboard.html
@@ -78,17 +78,17 @@
         <h2>Wireframe</h2>
         <p>A drawn layout design for the pages:</p>
         <h5>Home</h5>
-        <img src="../assetshtml/home.png" alt="Home Image">
+        <img src="home.png" alt="Home Image">
         <br><h5>Professional</h5>
-        <img src="../assetshtml/professional.png" alt="professional Image">
+        <img src="professional.png" alt="professional Image">
         <br><h5>Personality</h5>
-        <img src="../assetshtml/personality.png" alt="personality Image">
+        <img src="personality.png" alt="personality Image">
         <br><h5>Personal Development</h5>
-        <img src="../assetshtml/personaldevelopment.png" alt="Personal Development Image">
+        <img src="personaldevelopment.png" alt="Personal Development Image">
         <br><h5>Reference</h5>
-        <img src="../assetshtml/reference.png" alt="Reference Image">
+        <img src="reference.png" alt="Reference Image">
         <br><h5>Storyboard</h5>
-        <img src="../assetshtml/storyboard.png" alt="Storyboard Image">
+        <img src="storyboard.png" alt="Storyboard Image">
     </section>  
     <footer>
         <p>&copy; Created by Merrick Foster, Web Programming CIT2011 Individual Assignment #1 UE1 Tutorials 11am on Tuesdays.</p>
