--- a/reference.html
+++ b/reference.html
@@ -36,7 +36,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="professional.html">Professional</a></li>
             <li><a href="personality.html">Personality</a></li>
-            <li><a href="personaldevelopment.html">Personal Development</a></li>
+            <li><a href="PersonalDevelopment.html">Personal Development</a></li>
             <li><a href="reference.html">Reference</a></li>
             <li><a href="Storyboard.html">Storyboard</a></li>
         </ul>
