--- a/index.html
+++ b/index.html
@@ -57,14 +57,16 @@
         </ul>
     </nav>
     <p1 id="p1">
-        Hello and thank you for visiting my corner of the internet! This website is a reflection of who I am a blend of my professional experiences, personal growth, and the unique personality that shapes my journey. Here, you'll find insights into my career path, the values that drive me, and the ongoing quest for self-improvement. Join me as I share my story, my passions, and the lessons I've learned along the way. Together, let's explore the many facets of life and growth!
+        Hello and thank you for visiting my corner of the internet! This website is a reflection of who am I and a blend of my professional experiences, personal growth, and the unique personality that shapes my journey. Here, you'll find insights into my career path, the values that drive me, and the ongoing quest for self-improvement. Join me as I share my story, my passions, and the lessons I've learned along the way. Together, let's explore the many facets of life and growth!
     </p1>
     <section class="self" style="text-align: center;">
         <a href="mailto:MERRICKAFOSTER@students.utech.edu.jm?subject=ID%232306913">
             <img src="self.jpg" alt="Picture of Merrick">
         </a>
     </section>
-    
+    <centre>
+    <a href="#top"style = "color: #ADD8E6;"> Back to Top of Page</a>
+</centre>
     <footer>
         <p style="text-align: center ">&copy; Created by Merrick Foster, Web Programming CIT2011 Individual Assignment #1 UE1 Tutorials 11am on Tuesdays.</p>
     </footer>
