--- a/personality.html
+++ b/personality.html
@@ -88,7 +88,9 @@
         <img src="second.png" alt="Personality Test Result 2">
         <p>The personality test revealed insights about my traits and behaviors. In general, I believe the test has validity as it accurately reflected my characteristics and tendencies. The results provided me with valuable self-awareness and reinforced my understanding of my strengths and areas for improvement.</p>
     </section>
-    
+    <centre>
+    <a href="#top"style = "color: #ADD8E6;"> Back to Top of Page</a>
+</centre>
     <footer>
         <p>&copy; Created by Merrick Foster, Web Programming CIT2011 Individual Assignment #1 UE1 Tutorials 11am on Tuesdays.</p>
     </footer>
