--- a/professional.html
+++ b/professional.html
@@ -110,6 +110,9 @@
             <li>BSc/Ba in Information Technology, Computer Science, or a related discipline; professional certification (e.g., Microsoft Certified Systems Administrator (MCSA)) is a plus</li>
         </ul>
     </section>
+    <centre>
+    <a href="#top"style = "color: #ADD8E6;"> Back to Top of Page</a>
+</centre>
     <footer>
         <p>&copy; Created by Merrick Foster, Web Programming CIT2011 Individual Assignment #1 UE1 Tutorials 11am on Tuesdays.</p>
     </footer>
