--- a/Storyboard.html
+++ b/Storyboard.html
@@ -90,5 +90,8 @@
         <br><h5>Storyboard</h5>
         <img src="storyboard.png" alt="Storyboard Image">
     </section>  
+    <centre>
+    <a href="#top"style = "color: #ADD8E6;"> Back to Top of Page</a>
+</centre>
     <footer>
         <p>&copy; Created by Merrick Foster, Web Programming CIT2011 Individual Assignment #1 UE1 Tutorials 11am on Tuesdays.</p>
