--- a/PersonalDevelopment.html
+++ b/PersonalDevelopment.html
@@ -51,7 +51,9 @@
     </style>
 </head>
 <body>
+    <!-- Main heading for the personal development page -->
     <h1>Personal Development</h1>
+    <!-- Navigation bar with links to different sections of the website -->
     <nav class="navbar">
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -67,7 +69,7 @@
             <p id="p1">This is my personal development page. Here you will find a summary of the lessons I've learned from "Twelve Pillars," the degree I'm pursuing, and the top skills I've acquired so far.</p>
         </section>
     </section>
-    
+    <!-- Section summarizing key lessons from the book "Twelve Pillars" -->
     <section class="summary">
         <h2>Summary of "Twelve Pillars" (Chapters 4-7)</h2>
         <p>In "Twelve Pillars," Jim Rohn and Chris Widener emphasize the significance of goal-setting and personal growth through the dialogue between Michael and Charlie. Michael discovers that setting goals is not just about achieving outcomes but about the transformation that occurs during the pursuit. He is encouraged to write down his aspirations, which helps clarify his desires and allows for the breakdown of long-term goals into manageable short-term objectives. The importance of time management is highlighted, urging individuals to prioritize important goals over urgent tasks. Additionally, the influence of one's social circle is discussed, with a focus on surrounding oneself with positive, successful individuals to foster growth. Applying these lessons, the value of clear, written goals, supportive relationships, and continuous self-education is recognized as essential for personal development and success.
@@ -86,7 +88,9 @@
             <li>Virtualization skills</li>
         </ul>
     </section>
-    
+    <centre>
+    <a href="#top"style = "color: #ADD8E6;"> Back to Top of Page</a>
+</centre>
     <footer>
         <p>&copy; Created by Merrick Foster, Web Programming CIT2011 Individual Assignment #1 UE1 Tutorials 11am on Tuesdays.</p>
     </footer>
